feat: introduce status tracking to BackendHealth* entities
feat: introduce status tracking to BackendHealth* entities

feat: introduce status tracking to BackendHealth* entities